Add target exception option